cleanup some test stuff and make the output cycle tests a bit more tolerant of issues.